# ProjectEuler

./: README.md  p17.ipynb  problem13.ipynb  problem14.ipynb  problem15.ipynb  problem19_counting_Sundays.py  problem5.ipynb  problem6.ipynb  problem8.ipynb  pyproject.toml
.github/: copilot-instructions.md
problem_list/p_001_Multiples_of_3_or_5/: desc_p_001_Multiples_of_3_or_5.md  solution_p_001_Multiples_of_3_or_5.ipynb
problem_list/p_002_Even_Fibonacci_Numbers/: desc_p_002_Even_Fibonacci_Numbers.md  solution_p_002_Even_Fibonacci_Numbers.ipynb
problem_list/p_003_Largest_Prime_Factor/: desc_p_003_Largest_Prime_Factor.md  solution_p_003_Largest_Prime_Factor.ipynb
problem_list/p_004_Largest_Palindrome_Product/: desc_p_004_Largest_Palindrome_Product.md  solution_p_004_Largest_Palindrome_Product.ipynb
problem_list/p_005_Smallest_Multiple/: desc_p_005_Smallest_Multiple.md  solution_p_005_Smallest_Multiple.ipynb
problem_list/p_006_Sum_Square_Difference/: desc_p_006_Sum_Square_Difference.md  solution_p_006_Sum_Square_Difference.ipynb
problem_list/p_007_10_001st_Prime/: desc_p_007_10_001st_Prime.md  solution_p_007_10_001st_Prime.ipynb
problem_list/p_008_Largest_Product_in_a_Series/: desc_p_008_Largest_Product_in_a_Series.md  solution_p_008_Largest_Product_in_a_Series.ipynb
problem_list/p_009_Special_Pythagorean_Triplet/: desc_p_009_Special_Pythagorean_Triplet.md  solution_p_009_Special_Pythagorean_Triplet.ipynb
problem_list/p_010_Summation_of_Primes/: desc_p_010_Summation_of_Primes.md  (+1 more)
tools/: folder_creator.py  task_description.py
(+188 files in other folders)
